{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "220c2844-487d-4ca9-bbbc-a7a1d6682282",
            "actions": [
                {
                    "name": "Move_P1",
                    "type": "Value",
                    "id": "fc2fde53-cab9-4fe1-9c60-c3db884ae1a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Confirm_P1",
                    "type": "Button",
                    "id": "7634386d-7dd2-4933-8ab2-e8a9831ab88a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_P2",
                    "type": "Value",
                    "id": "e9d2d774-354c-4af3-a2bb-9cf1324e6ca1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Confirm_P2",
                    "type": "Button",
                    "id": "64724626-d50f-4999-9471-0ece13d4044f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector (P1)",
                    "id": "f5a1679f-a1dd-49e8-bfc4-0ad9f82318eb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_P1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2893f102-0677-4230-9d46-0b8b21b22f65",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P1",
                    "action": "Move_P1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0c36d296-dc5d-4597-b717-93ff3d51483c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P1",
                    "action": "Move_P1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a87eb63d-af42-4f8e-866d-b7d42711581b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P1",
                    "action": "Move_P1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4788e789-f031-4c74-8760-9733757e6b8f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P1",
                    "action": "Move_P1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f3696409-bdb7-4210-9d2d-1d2e3e6a4662",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P1",
                    "action": "Confirm_P1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector (P2)",
                    "id": "441fe262-3f71-4c65-ad89-10ff4f2b6c1e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_P2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f9bc1434-02c3-404d-9371-8b4908da8dac",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P2",
                    "action": "Move_P2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "12d5d785-478f-49c0-8ae7-9b4d47c36718",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P2",
                    "action": "Move_P2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "97756237-e068-46dd-9757-35a97f6a5971",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P2",
                    "action": "Move_P2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fda15e04-1da9-4c69-bda2-c87e9cd20b56",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P2",
                    "action": "Move_P2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "602bea9f-ced6-4b3d-9de8-445e3cf46736",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard_P2",
                    "action": "Confirm_P2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard_P1",
            "bindingGroup": "Keyboard_P1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard_P2",
            "bindingGroup": "Keyboard_P2",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}